validating-admission-webhook/kubernetes/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: validation

---

apiVersion: v1
kind: Service
metadata:
  name: warden
  namespace: validation
spec:
  selector:
    app: warden
  ports:
  - port: 443
    targetPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: warden-deployment
  namespace: validation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warden
  template:
    metadata:
      labels:
        app: warden
    spec:
      containers:
        - name: warden-ctnr
          image: warden:v1
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
